# miru

./: .gitignore  CHANGELOG.md  CLAUDE.md  KONJO_PROMPT.md  PLAN.md  README.md  pyproject.toml  render.yaml
api/: Dockerfile  __init__.py  conftest.py  main.py  requirements.txt  test_alerts.py  test_api.py  test_batch_and_cache.py  test_history_diff_calibration.py  test_phase22_endpoints.py  test_roi.py  test_sensitivity.py  test_synergy.py
dashboard/: CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/: demo.py  explain.html  index.html  live.html  server.py  visual.html
miru/: __init__.py  alerts.py  annotation.py  config.py  consensus.py  counterfactual.py  cross_modal.py  dataset_analytics.py  diff.py  ensemble.py  eu_ai_act.py  explain_cache.py  export.py  fidelity.py  gradcam.py  gradcam_explainer.py  history.py  integrated_attention.py  joint_attribution.py  lime_explainer.py  main.py  metrics.py  model_comparison.py  posthoc_consensus.py  recorder.py  rollout.py  schemas.py  search.py  sensitivity.py  shap_explainer.py  synergy.py
tests/: conftest.py  test_alerts.py  test_analysis_export.py  test_annotation.py  test_api.py  test_api_overlay.py  test_attention.py  test_bench.py  test_clip_backend.py  test_comparison.py  test_consensus.py  test_counterfactual.py  test_cross_modal.py  test_dataset_analytics.py  test_diff.py  test_ensemble.py  test_eu_ai_act.py  test_explain_cache.py  test_explainers.py  test_export.py  test_fidelity.py  test_gradcam.py  test_history.py  test_integrated_attention.py  test_roi.py  (+18 more)
(+68 files in other folders)
