[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miru"
version = "0.4.0"
description = "Multimodal reasoning tracer and VLM explainability engine"
license = { text = "BUSL-1.1" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
backends = ["transformers>=4.35.0", "torch>=2.0.0", "Pillow>=9.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
